--- a/Entre Caçadores, Colossos e Baldurianos/style.css
+++ b/Entre Caçadores, Colossos e Baldurianos/style.css
@@ -5,12 +5,18 @@
 body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #111 40%, #1c1c1c 100%);    background-repeat: no-repeat;
+    background: linear-gradient(to bottom, #111 40%, #1c1c1c 100%);    
+    background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed; 
     background-position: center;
     color: white;
     font-family: Georgia;
+}
+
+.conteudo{
+    display: flex;
+    justify-content: center;
 }
 
 .nav{
@@ -22,13 +28,11 @@ body {
     background-image:url(./imagens/menu_cima.png);
     background-position: 500px 230px;
     background-size: cover;
-    color:goldenrod; 
-    margin: 0%;  
+    color:goldenrod;  
     height: 170px;
     width: 100%;
-    font-family: 'Georgia', serif;
-    z-index: 1;
     background-position: center;
+    z-index: 2;
 }
 .nav h1{
     margin-top: 20px;
@@ -57,7 +61,6 @@ body {
 .agradecimento p {
     font-size: 18px;
     line-height: 1.6;
-    max-width: 800px;
     margin: 0 auto 20px auto;
     text-align:start;
 }
@@ -65,7 +68,6 @@ body {
 .homemLeao{
     display: flex;
     flex-direction: row;
-    font-family: 'Georgia', serif;
     text-align: center;
     height: 400px;
     justify-content: flex-start;
@@ -77,15 +79,12 @@ body {
 }
 
 
-
-
 .bloodborne {
     position: relative;
-    height: 700px;
+    height: 750px;
     display: flex;
     align-items: flex-start;
     justify-content:flex-start;
-    overflow: hidden;
     color: aliceblue;
     margin: 30px;
 }
@@ -96,8 +95,6 @@ body {
     background-image: url("./imagens/bloodborne_inicial_esfumacado.png");
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-  
     mask-image: linear-gradient(to right, transparent, black);
     -webkit-mask-image: linear-gradient(to right, transparent, black);
     z-index: 0;
@@ -109,11 +106,12 @@ body {
     background: none;
     border: none;
     color: #cdbd9c;
-    font-size: 1.5rem;
-    font-family:Georgia, 'Times New Roman'; 
+    font-size: 24px;
+    font-family:Georgia; 
     cursor: pointer;
     transition: color 0.3s ease;
-    text-shadow: 0 0 2px #000; }
+    text-shadow: 0 0 2px #000; 
+}
   
 .botao::after {
     content: '';
@@ -157,7 +155,6 @@ body {
     display: flex;
     font-family: Fleshandblood;
     font-size: 58px;
-  
 }
 
 
@@ -165,11 +162,10 @@ body {
 
 .colossus {
     position: relative;
-    height: 700px;
+    height: 750px;
     display: flex;
     align-items: center;
     justify-content:flex-end;
-    overflow: hidden;
     color: aliceblue;
     margin: 30px;
 }
@@ -180,8 +176,6 @@ body {
     background-image: url("./imagens/sotc_inicial_esfumacado.png");
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-  
     mask-image: linear-gradient(to left, transparent, black);
     -webkit-mask-image: linear-gradient(to left, transparent, black);
     z-index: 0;
@@ -203,25 +197,10 @@ body {
  
 }
 
-
-
-
-
 .nomeJogopng{
     height: 150px;
 }
 
-.bg3 {
-    position: relative;
-    height: 700px;
-    display: flex;
-    align-items: flex-start;
-    justify-content:flex-start;
-    overflow: hidden;
-    color: aliceblue;
-    margin: 30px;
-    margin: 30px
-}
   
 .bg3 .fundoMascarado {
     position: absolute;
@@ -230,8 +209,53 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-  
     mask-image: linear-gradient(to right, transparent, black);
     -webkit-mask-image: linear-gradient(to right, transparent, black);
     z-index: 0;
+}
+
+.bg3 {
+    position: relative;
+    height: 750px;
+    display: flex;
+    align-items: flex-start;
+    justify-content:flex-start;
+    color: aliceblue;
+    margin: 30px;
+    margin: 30px
+}
+
+.introColossus {
+    position: relative;
+    height: 515px;
+    width: 80%;
+    display: flex;
+    color: aliceblue;
+    margin: 30px;
+}
+  
+.introColossus .fundoMascarado {
+    position: absolute;
+    inset: 0;
+    background-image: url(./imagens/mono_morta.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.introColossus .container{
+    z-index: 1;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-end;
+    align-items: center;
+    height: 100%;
+    z-index: 1;
+}
+
+.introColossus #div_legenda{
+    height: 40px;
+    font-family: papyrus;
+    font-size: 25px;
 }
