--- a/Entre Caçadores, Colossos e Baldurianos/style.css
+++ b/Entre Caçadores, Colossos e Baldurianos/style.css
@@ -17,6 +17,7 @@ body {
 .conteudo{
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .nav{
@@ -227,8 +228,8 @@ body {
 
 .introColossus {
     position: relative;
-    height: 515px;
-    width: 80%;
+    height: 650px;
+    width: 100%;
     display: flex;
     color: aliceblue;
     margin: 30px;
@@ -237,7 +238,7 @@ body {
 .introColossus  .fundoMascarado1{
     position: absolute;
     inset: 0;
-    background-image: url(./imagens/mono_morta.png);
+    background-image: url(./imagens/mono_morta_esfumacado.png);
     background-size: cover;
     background-position: center;
     z-index: 0;
@@ -248,22 +249,22 @@ body {
 .introColossus .fundoMascarado2{
     position: absolute;
     inset: 0;
-    background-image: url(./imagens/espada_luz.jpg);
+    background-image: url(./imagens/espada_luz_esfumacado.png);
     background-size: cover;
     background-position: center;
     z-index: 0;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 2s ease;
 }
 
 .introColossus  .fundoMascarado3{
     position: absolute;
     inset: 0;
-    background-image: url(./imagens/colosso_inicial.png);
+    background-image: url(./imagens/colosso_inicial_esfumacado.png);
     background-size: cover;
-    background-position: center;
+    background-position: top;
     z-index: 0;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 2s ease;
 }
 
@@ -290,4 +291,53 @@ body {
     2px -2px 5px #000;
 }
 
+.jornadaColosso{
+    color: #f0e6d2;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    line-height: 1.6;
+    text-align: center;
+    margin: 20px 20px 40px 40px;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.slideshow {
+  position: relative;
+  width: 80%;
+  height: 450px;
+  overflow: hidden;
+}
+
+.slideshow img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  animation: fade 3s infinite;
+  background-size: cover;
+}
+
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 1;
+  }
+  53% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
