--- a/Entre Caçadores, Colossos e Baldurianos/style.css
+++ b/Entre Caçadores, Colossos e Baldurianos/style.css
@@ -622,19 +622,61 @@ body {
     opacity: 1;
 }
 
+.lobo{  
+    position: relative;
+    height: 700px;
+    width: 100%;
+    display: flex;
+    color: aliceblue;
+}
+
+.lobo .fundoMascarado5{
+    position: absolute;
+    inset: 0;
+    background-image: url(./imagens/bloodborne/bloodborne_lobo.png
+    );
+    background-size: cover;
+    background-position: top;
+    z-index: 0;
+    opacity: 1;
+    transition: opacity 2s ease;
+    margin-top: 60px;
+}
+
+.lobo .fundoMascarado6{
+    position: absolute;
+    inset: 0;
+    background-image: url(./imagens/bloodborne/bloodborne_lobo.png
+    );
+    background-size: cover;
+    background-position: top;
+    z-index: 0;
+    opacity: 0;
+    transition: opacity 2s ease;
+    margin-top: 60px;
+}
+
+.lobo .container{
+    z-index: 1;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-end;
+    align-items: center;
+    height: 100%;
+    z-index: 1;
+}
+
 
 
 .conteudo .boneca{
     display: flex;
     flex-direction: column;
-   
     justify-content: flex-end;
     z-index: 0;
     align-items: center;
     margin-top: 30px;
-  
-
-
 }
 
 .conteudo .boneca .container{
