--- a/Entre Caçadores, Colossos e Baldurianos/style.css
+++ b/Entre Caçadores, Colossos e Baldurianos/style.css
@@ -500,9 +500,9 @@ body {
 .navBloodborne{
     position: fixed;
     display: flex;
-    justify-content:flex-start;
-    align-items: flex-end;
-    flex-direction: column;
+    justify-content:flex-end;
+    align-items: flex-start;
+    flex-direction: row;
     background-image:url(./imagens/menu_cima.png);
     background-size:cover;
     height: 160px;
@@ -510,6 +510,20 @@ body {
     background-position:top;
     z-index: 2;
     background-position: 500px;
+}
+
+.discernimento{
+    display: flex;
+    flex-direction: row;
+}
+
+#div_discernimento{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-size: 35px;
+    margin-right: 15px;
 }
 
 .navBloodborne img{
@@ -575,6 +589,18 @@ body {
     z-index: 0;
     opacity: 0;
     transition: opacity 2s ease;
+    margin-top: 60px;
+}
+
+.introBlood .fundoMascarado10{
+    position: absolute;
+    inset: 0;
+    background-image: url(./imagens/bloodborne/000000.png);
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+    opacity: 1;
+    transition: opacity 4.5s ease;
     margin-top: 60px;
 }
 
@@ -646,7 +672,7 @@ body {
 .lobo .fundoMascarado6{
     position: absolute;
     inset: 0;
-    background-image: url(./imagens/bloodborne/bloodborne_lobo.png
+    background-image: url(./imagens/bloodborne/bloodborne_morreu.jpg
     );
     background-size: cover;
     background-position: top;
@@ -668,6 +694,22 @@ body {
     z-index: 1;
 }
 
+.conteudo .dream{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    z-index: 0;
+    align-items: center;
+}
+
+.conteudo .dream .container{
+    justify-content: flex-end;
+    background-image: url(./imagens/bloodborne/bloodborne_sonho_do_cacador.jpg);
+    width: 100%;
+    height: 700px;
+    background-size: cover;
+
+}
 
 
 .conteudo .boneca{
@@ -681,18 +723,46 @@ body {
 
 .conteudo .boneca .container{
     justify-content: flex-end;
-        background-image: url(./imagens/bloodborne/bloodborne_boneca.jpg);
-         width: 80%;
+    background-image: url(./imagens/bloodborne/bloodborne_boneca.jpg);
+    width: 80%;
     height: 600px;
-        background-size: cover;
-
-
+    background-size: cover;
 }
 
 .conteudo .boneca .container .botao{
     margin-bottom: 40px;
 }
 
+
+.escolherArma .container {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  height: 600px;
+  flex-direction: row;
+}
+
+.escolherArma .container div {
+  height: 500px;
+  width: 500px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.machado {
+  background-image: url(./imagens/bloodborne/bloodborne_machado.png);
+}
+
+.serra {
+  background-image: url(./imagens/bloodborne/bloodborne_serra.png);
+}
+
+.bengala {
+  background-image: url(./imagens/bloodborne/bloodborne_bengala.png);
+}
 
 
 
