--- a/Entre Caçadores, Colossos e Baldurianos/style.css
+++ b/Entre Caçadores, Colossos e Baldurianos/style.css
@@ -682,6 +682,18 @@ body {
     margin-top: 60px;
 }
 
+.lobo .fundoMascarado11{
+    position: absolute;
+    inset: 0;
+    background-image: url(./imagens/bloodborne/bloodborne_inicial.jpg);
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+    opacity: 0;
+    transition: opacity 2s ease;
+    margin-top: 60px;
+}
+
 .lobo .container{
     z-index: 1;
     width: 100%;
@@ -695,20 +707,30 @@ body {
 }
 
 .conteudo .dream{
+    position: relative;
+    height: 750px;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    align-items: flex-start;
+    justify-content:flex-start;
+    color: aliceblue;
+
+}
+
+
+
+.conteudo .dream .fundoMascarado {
+    position: absolute;
+    inset: 0;
+    background-image: url(./imagens/bloodborne/bloodborne_sonho_do_cacador.jpg);
+    background-size: cover;
+    background-position: center;
+    mask-image: linear-gradient(to right, transparent, black);
+    -webkit-mask-image: linear-gradient(to right, transparent, black);
     z-index: 0;
-    align-items: center;
 }
 
 .conteudo .dream .container{
-    justify-content: flex-end;
-    background-image: url(./imagens/bloodborne/bloodborne_sonho_do_cacador.jpg);
-    width: 100%;
-    height: 700px;
-    background-size: cover;
-
+    margin-left: 100px;
 }
 
 
