--- a/Entre Caçadores, Colossos e Baldurianos/public/css/dashboards.css
+++ b/Entre Caçadores, Colossos e Baldurianos/public/css/dashboards.css
@@ -29,3 +29,9 @@ body {
   width: 80%;
   align-items: center;
 }
+
+.graficos {
+  width: 80%;
+  height: 300px;  /* ou use vh como quiser */
+  margin: auto;
+}
