--- a/Entre Caçadores, Colossos e Baldurianos/public/css/quiz.css
+++ b/Entre Caçadores, Colossos e Baldurianos/public/css/quiz.css
@@ -1,11 +1,10 @@
 * {
-    margin: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    /* background: linear-gradient(to bottom, #111 40%, #1c1c1c 100%);     */
     background-image: url(../assets/imagens/fumaca_fundo.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,11 +12,68 @@ body {
     background-position: center;
     color: #f0e6d2;
     font-family: Georgia;
-
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .conteudo {
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    align-items: center;
+}
+
+.quiz {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    justify-content: space-between;
+    height: 40vh;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.botaoRespostas {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+    margin: 10px 0;
+}
+
+.btn{
+        position: relative;
+    background: none;
+    border: none;
+    color: #cdbd9c;
+    font-size: 24px;
+    font-family: Georgia;
+    cursor: pointer;
+    transition: color 0.3s ease;
+    text-shadow: 0 0 2px #000;
+}
+
+.btn::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    border-radius: 50%;
+    background: rgba(251, 243, 188, 0.2);
+    filter: blur(8px);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: -1;
+}
+
+.btn:hover {
+    color: #cdb27c;
+}
+
+.btn:hover::after {
+    opacity: 1;
 }
