--- a/Entre Caçadores, Colossos e Baldurianos/public/css/style.css
+++ b/Entre Caçadores, Colossos e Baldurianos/public/css/style.css
@@ -714,85 +714,29 @@ body {
     z-index: 1;
 }
 
-.conteudo .dream {
-    position: relative;
-    height: 750px;
+.dream {
+    width: 100%;
+    height: 700px;
+    overflow: hidden;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    color: aliceblue;
-
-}
-
-
-
-.conteudo .dream .fundoMascarado {
-    position: absolute;
-    inset: 0;
-    background-image: url(../assets/imagens/bloodborne/bloodborne_sonho_do_cacador.jpg);
+    align-items: flex-start; 
+    justify-content: center; 
+    flex-direction: column;
+    font-size: 28px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0)), url(../assets/imagens/bloodborne/bloodborne_sonho_do_cacador.jpg);
     background-size: cover;
-    background-position: center;
-    mask-image: linear-gradient(to right, transparent, black);
-    -webkit-mask-image: linear-gradient(to right, transparent, black);
-    z-index: 0;
-}
-
-.conteudo .dream .container {
-    margin-left: 100px;
+    padding-top: 50px;
+    background-position: bottom;
 }
 
 
-.conteudo .boneca {
+.mecanica .container .coluna{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    z-index: 0;
     align-items: center;
-    margin-top: 30px;
+
 }
 
-.conteudo .boneca .container {
-    justify-content: flex-end;
-    background-image: url(../assets/imagens/bloodborne/bloodborne_boneca.jpg);
-    width: 80%;
-    height: 600px;
-    background-size: cover;
-}
-
-.conteudo .boneca .container .botao {
-    margin-bottom: 40px;
-}
-
-
-.escolherArma .container {
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    height: 600px;
-    flex-direction: row;
-}
-
-.escolherArma .container div {
-    height: 500px;
-    width: 500px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    cursor: pointer;
-    margin: 10px;
-}
-
-.machado {
-    background-image: url(../assets/imagens/bloodborne/bloodborne_machado.png);
-}
-
-.serra {
-    background-image: url(../assets/imagens/bloodborne/bloodborne_serra.png);
-}
-
-.bengala {
-    background-image: url(../assets/imagens/bloodborne/bloodborne_bengala.png);
-}
 /* 
 .conteudo .yharnam .fundoMascarado {
     position: absolute;
@@ -972,6 +916,7 @@ body {
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     transition: transform 0.3s;
     font-size: 15px;
+    cursor: pointer;
 }
 .area .container{
     margin-left: 10px;
