--- a/Entre Caçadores, Colossos e Baldurianos/public/css/dashboards.css
+++ b/Entre Caçadores, Colossos e Baldurianos/public/css/dashboards.css
@@ -1,37 +1,106 @@
 * {
-    margin: 0px;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    /* background: linear-gradient(to bottom, #111 40%, #1c1c1c 100%);     */
-    background-image: url(../assets/imagens/fumaca_fundo.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    color: #f0e6d2;
-    font-family: Georgia;
+  height: 100%;
+  font-family: Georgia;
+  background-image: url(../assets/imagens/fumaca_fundo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  color: #f0e6d2;
 }
 
-.conteudo {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
 
-.kpi{
+.conteudo.dashboard {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 80%;
-  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  gap: 20px;
+  margin-top: 100px;
+}
+
+.conteudo.dashboard a{
+  text-decoration: none;
+  color: #f0e6d2;
+  position: absolute;
+  top: 9%;
+  left: 46.5%;
+}
+
+.conteudo.dashboard h1{
+  position: absolute;
+  top: 3%;
+  left: 50%;
+}
+
+.principal {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 20px;
 }
 
 .graficos {
-  width: 80%;
-  height: 300px;  /* ou use vh como quiser */
-  margin: auto;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+}
+
+.kpi {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+}
+
+.conquista {
+  flex: 0.8;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(20, 20, 20, 0.6);
+  padding: 20px;
+  border-radius: 12px;
+  overflow-y: auto;
+  max-height: 100%;
+  box-shadow: 0 0 12px rgba(255, 255, 255, 0.05);
+}
+
+
+#container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+
+.ganho {
+  display: none;
+}
+
+.conquista.comum {
+  background-color: #3a3a3a;
+  border-left: 4px solid #aaa;
+}
+
+.conquista.rara {
+  background-color: #1e3a5f;
+  border-left: 4px solid #4fc3f7;
+  box-shadow: 0 0 10px rgba(79, 195, 247, 0.3);
+}
+
+.conquista.epica {
+  background-color: #5e2ca5;
+  border-left: 4px solid #ba68c8;
+  box-shadow: 0 0 12px rgba(186, 104, 200, 0.4);
 }
