--- a/Entre Caçadores, Colossos e Baldurianos/public/css/quiz.css
+++ b/Entre Caçadores, Colossos e Baldurianos/public/css/quiz.css
@@ -77,3 +77,12 @@ body {
 .btn:hover::after {
     opacity: 1;
 }
+
+.conteudo a{
+    text-decoration: none;
+    color: #f0e6d2;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    font-size: 28px;
+}
